--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jwt-decode": "^3.1.0",
     "jwt-decode": "^4.0.0",
     "next": "14.1.0",
     "react": "^18",
